User controller tests

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,12 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-dan:
-  username: dan
-#  uid: 12345
-#  provider: github
-#  email: dan@dan.com
-kari:
-  username: kari
-#  uid: 67890
-#  provider: github
-#  email: kari@kari.com
+ada:
+  provider: github
+  uid: 12345
+  email: ada@adadevelopersacademy.org
+  username: countess_ada
+
+grace:
+  provider: github
+  uid: 13371337
+  email: grace@hooper.net
+  username: graceful_hopps
